fix: nav bar header cutoff

--- a/styles.css
+++ b/styles.css
@@ -118,7 +118,7 @@ h1 {
 }
 
 h2 {
-  margin-top: 1em;
+  margin-top: 1.5em;
   margin-bottom: 0em;
   letter-spacing: .03em;
   font-size: 1.25em;
